# Swamp-Sequencers

./: .gitignore  CMakeLists.txt  README.md  main.cpp  suffix_array.h  suffix_tree.h
include/SwampSeqLib/: genome_mapper.h  suffix_array.h  suffix_tree.h
src/: CMakeLists.txt  genome_mapper.cpp  main.cpp  suffix_array.cpp  suffix_tree.cpp
tests/: CMakeLists.txt  swamp_test.cpp
